<resources>
    <string name="app_name">GithubUserApp</string>
    <string name="credit">by Farhan</string>
    <string name="welcome">Welcome</string>
    <string name="searching">Searching</string>
    <string name="not_found">Not found</string>
    <string name="search_hint">lordfarhan</string>
    <string name="empty">Empty</string>

    <string name="repositories">Repositories</string>

    <string name="username">Username</string>
    <string name="location">Location</string>
    <string name="company">Company</string>

    <string name="page_detail">Detail</string>
    <string name="page_follower">Follower</string>
    <string name="page_following">Following</string>

    <string name="favorite_users">Favorite Users</string>
    <string name="settings">Settings</string>

    <string name="reminder_header">Reminder</string>
    <string name="reminder_title">Reminder at 09.00 AM</string>
    <string name="reminder_key">Reminder</string>
    <string name="back">Back</string>
</resources>